--- a/9-GOMBURZA-DUIGAN-PETA2.html
+++ b/9-GOMBURZA-DUIGAN-PETA2.html
@@ -5,8 +5,11 @@
 
 <center><h1 style="color:gray;"> All About <del>You</del> <em><mark>Me</mark></em></h1>
 
-<p>Hello, <ins><b>my</b></ins> name is Josh Aldwyn A. Duigan <img src="IMG_20241116_154926.jpg" alt="me"
-width="120px" height="150px">, 14 years old from 9-GomBurZa, studying at Lakand Dula Highschool. What <b><ins>i</b></ins> do when <b><ins>I'm</b></ins> sad, bored or when <b><ins>i</b></ins>  have extra time is <mark><ins>drawing/playing with friends because it makes <ins><b>me</b></ins>  happy. Other things that makes <b><ins>me</b></ins>  happy are newly bought things, or expensive things that can be useful at times</mark></ins>. <b><ins>My</b></ins> life motto is <mark><ins>"Perception comes from forgiveness"</ins></mark> that <b><ins>i</b></ins>  rephrased from and originally known as <ins><blockquote><em><big>"To know one, Is to forgive one"</big></blockquote></ins></em></p>
+<p>Hello, <ins><b>my</b></ins> name is Josh Aldwyn A. Duigan 
+  <a href="https://www.facebook.com/lovedkndnddjdj/"
+  <img src="IMG_20241116_154926.jpg" alt="me"
+width="120px" height="150px">
+    <a></a>, 14 years old from 9-GomBurZa, studying at Lakand Dula Highschool. What <b><ins>i</b></ins> do when <b><ins>I'm</b></ins> sad, bored or when <b><ins>i</b></ins>  have extra time is <mark><ins>drawing/playing with friends because it makes <ins><b>me</b></ins>  happy. Other things that makes <b><ins>me</b></ins>  happy are newly bought things, or expensive things that can be useful at times</mark></ins>. <b><ins>My</b></ins> life motto is <mark><ins>"Perception comes from forgiveness"</ins></mark> that <b><ins>i</b></ins>  rephrased from and originally known as <ins><blockquote><em><big>"To know one, Is to forgive one"</big></blockquote></ins></em></p>
 
 <p><ins><b>My</b></ins> family members are: <big>Mark Selwyn A. Duigan</big>, being <ins><b>my</ins></b> sibling or older brother, <big>Maria Cecilia A. Duigan</big> and <big>Jose Niño A. Duigan</big>, being <b><ins><b>my</b></b></ins> <em>parents</em>.</p>
 
