--- a/9-GOMBURZA-DUIGAN-PETA2.html
+++ b/9-GOMBURZA-DUIGAN-PETA2.html
@@ -29,7 +29,7 @@ I also love spending time with my friends and family, it calms me and ease my he
 <p>And finally, <b><ins>my</b></ins> plans for the future are: <mark><ins>manage a business, start a family, and travel around the world<mark><u>, but first <sub><b><ins>i</b></ins> want to study really hard</sub>, because if <b><ins>i</b></ins> don't, <b><ins>i</b></ins> wouldn't get a good future and would not be able to do things <b><ins>i</b></ins> want to do </p>
 
  Socials
- <a href="https://flammxe.github.io/9-GOMBURZA-DUIGAN-PETA2/9-GOMBURZA-DUIGAN-PETA2.html">
+ <a href="https://www.facebook.com/lovedkndnddjdj?mibextid=ZbWKwL">
   sssssss
  </a>
 </center>
