--- a/9-GOMBURZA-DUIGAN-PETA2.html
+++ b/9-GOMBURZA-DUIGAN-PETA2.html
@@ -28,10 +28,21 @@ I also love spending time with my friends and family, it calms me and ease my he
 <img src="received_417236077951014.jpeg" alt="friends" width="100px" height=",238px">
 <p>And finally, <b><ins>my</b></ins> plans for the future are: <mark><ins>manage a business, start a family, and travel around the world<mark><u>, but first <sub><b><ins>i</b></ins> want to study really hard</sub>, because if <b><ins>i</b></ins> don't, <b><ins>i</b></ins> wouldn't get a good future and would not be able to do things <b><ins>i</b></ins> want to do </p>
 
+   <p>
  Socials
  <a href="https://www.facebook.com/lovedkndnddjdj?mibextid=ZbWKwL">
-  sssssss
+  FACEBOOK
  </a>
+   <a href="https://www.instagram.com/jushdoigandndd/profilecard/?igsh=MXdveXQ2NzkzNWI0eQ==">
+      INSTAGRAM
+   </a>
+   </p>
+  <p>Incase you are bored
+  <a href="slowroads.io">
+    GAME
+  </a>
+  </p>
+
 </center>
 </body>
 </html>
