--- a/9-GOMBURZA-DUIGAN-PETA2.html
+++ b/9-GOMBURZA-DUIGAN-PETA2.html
@@ -38,8 +38,8 @@ I also love spending time with my friends and family, it calms me and ease my he
    </a>
    </p>
   <p>Incase you are bored
-  <a href="slowroads.io">
-    GAME
+  <a href="https://www.y8.com/">
+    GAMES
   </a>
   </p>
 
